Logout endpoint in NodeJS server
